# eric_prydz

./: .env  .gitignore  .python-version  README.MD  debug.html  output.json  pyproject.toml  search_results.html  setup.sh  test_output.json  tracklists.json
collector/: db_loader.py  settings.py  url_collector.py
collector/spiders/: reference_spider.py  tracklists_spider.py
collector/utils/: state_manager.py
raw_data/: debug_playwright.html  processed_urls.json  tracklist_urls.json  tracklists.json
